--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "bootstrap-loader": "^2.0.0-beta.20",
     "lodash": "^4.17.4",
+    "lune": "^0.4.0",
     "moment": "^2.17.1",
+    "numerologic": "0.0.6",
+    "suncalc": "^1.8.0",
     "tween.js": "^16.6.0",
     "vue": "^2.1.10",
     "vue-material": "^0.7.1",
