--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "bootstrap-loader": "^2.0.0-beta.20",
     "lodash": "^4.17.4",
     "lune": "^0.4.0",
