--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
     ["es2015", { "modules": false }],
-    "stage-2"
+    "stage-2",
+    "flow"
   ],
   "plugins": ["transform-runtime"],
   "comments": false,
