--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 node_modules/
 .idea/
 dist/
-npm-debug.log
+npm-debug.log*
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
+yarn.lock*
+flow-typed
