--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "flow:typed": "./node_modules/.bin/flow-typed install --overwrite",
     "flow:watch": "./node_modules/.bin/nodemon --watch ./src/ --exec 'npm -s run flow'",
-    "g00dv1n": "rm -rf ../g00dv1n.github.io/* &&  cp -rf dist/* ../g00dv1n.github.io/ && cd ../g00dv1n.github.io/ && git add -A && git commit -m 'update' && git push -u origin master"
+    "g00dv1n": "rm -rf ../g00dv1n.github.io/* &&  cp -rf dist/* ../g00dv1n.github.io/ && cd ../g00dv1n.github.io/ && git add -A && git commit -m 'update' && git push -u origin master",
+    "server:push": "rm -rf ../moon-organizer-server/frontend/* &&  cp -rf dist/* ../moon-organizer-server/frontend/ && cd ../moon-organizer-server/frontend/ && git add -A && git commit -m 'update frontend' && git push -u origin master"
   },
   "dependencies": {
     "axios": "^0.15.3",
