--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bootstrap-loader": "^2.0.0-beta.20",
+    "email-validator": "^1.0.7",
     "lodash": "^4.17.4",
     "lune": "^0.4.0",
     "moment": "^2.17.1",
@@ -27,6 +28,7 @@
     "suncalc": "^1.8.0",
     "tween.js": "^16.6.0",
     "vue": "^2.1.10",
+    "vue-analytics": "^3.2.0",
     "vue-head": "^2.0.10",
     "vue-material": "^0.7.1",
     "vue-router": "^2.2.0",
