--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bootstrap-loader": "^2.0.0-beta.20",
+    "enjoyhint": "^1.0.1",
     "lodash": "^4.17.4",
     "lune": "^0.4.0",
     "moment": "^2.17.1",
