--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bootstrap-loader": "^2.0.0-beta.20",
+    "croppie": "^2.4.1",
     "element-ui": "^1.2.9",
     "email-validator": "^1.0.7",
     "enjoyhint": "^1.0.1",
