--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "^2.1.10",
     "vue-analytics": "^3.2.0",
     "vue-head": "^2.0.10",
+    "vue-i18n": "^6.1.3",
     "vue-material": "^0.7.1",
     "vue-router": "^2.2.0",
     "vue-social-sharing": "^2.1.5",
