--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tween.js": "^16.6.0",
     "vue": "^2.3.3",
     "vue-analytics": "^3.2.0",
+    "vue-charts": "^0.2.1",
     "vue-head": "^2.0.10",
     "vue-i18n": "^6.1.3",
     "vue-material": "^0.7.1",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
