--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-plugin-component": "^0.10.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "compression-webpack-plugin": "^1.0.0",
     "croppie": "^2.4.1",
     "element-ui": "^1.3.3",
     "email-validator": "^1.0.7",
     "enjoyhint": "^1.0.1",
     "lodash": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
     "lune": "^0.4.0",
     "moment": "^2.17.1",
     "numerologic": "0.0.6",
