--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "axios": "^0.15.3",
     "babel-plugin-component": "^0.10.0",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-es2016": "^6.24.1",
     "compression-webpack-plugin": "^1.0.0",
     "croppie": "^2.4.1",
     "element-ui": "^1.3.3",
     "email-validator": "^1.0.7",
     "enjoyhint": "^1.0.1",
     "lodash": "^4.17.4",
+    "lodash-es": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
     "lune": "^0.4.0",
     "moment": "^2.17.1",
@@ -50,9 +52,11 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "bootstrap-sass": "^3.3.7",
