--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-preset-es2016": "^6.24.1",
     "compression-webpack-plugin": "^1.0.0",
     "croppie": "^2.4.1",
-    "element-ui": "^1.3.3",
+    "element-ui": "^1.4.3",
     "email-validator": "^1.0.7",
     "enjoyhint": "^1.0.1",
     "lodash": "^4.17.4",
@@ -33,6 +33,7 @@
     "lune": "^0.4.0",
     "moment": "^2.17.1",
     "numerologic": "0.0.6",
+    "prepack-webpack-plugin": "^1.1.0",
     "suncalc": "^1.8.0",
     "tween.js": "^16.6.0",
     "vue": "^2.3.3",
